--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -29,7 +29,7 @@
     --h1-font-size: 1.8rem;
     --h2-font-size: 1.5rem;
     --h3-font-size: 1.3rem;
-    --icon-font-size: .685rem;
+    --icon-font-size: .895rem;
 
     /* ----Margin bottoms--- */
     --mb-lg: 20px;
@@ -511,7 +511,7 @@ footer .contact, footer .social{
         --h1-font-size: 2.2rem;
         --h2-font-size: 2rem;
         --h3-font-size: 1.8rem;
-        --icon-font-size: .85rem;
+        --icon-font-size: 1.025rem;
     
         /* ----Margin bottoms--- */
         --mb-lg: 30px;
