--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -345,8 +345,8 @@ div.info, .info-btn{
 #portfolio .card{
     margin: var(--mb-lg);
 }
-.card-title{
-     height: 60px;
+.card-text{
+     height: 40px;
      overflow: scroll;
 }
 .portfolio-container{
