--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -29,7 +29,7 @@
     --h1-font-size: 1.8rem;
     --h2-font-size: 1.5rem;
     --h3-font-size: 1.3rem;
-    --icon-font-size: .95rem;
+    --icon-font-size: 1.0015rem;
 
     /* ----Margin bottoms--- */
     --mb-lg: 20px;
@@ -346,8 +346,8 @@ div.info, .info-btn{
     margin: var(--mb-lg);
 }
 .card>img{
-     width: 400px;
-     height: 400px;
+     width: 270px;
+     height: 340px;
 }
 .portfolio-container{
     display: flex;
@@ -662,7 +662,7 @@ footer .contact, footer .social{
         --lg-font-size: 1.6rem;
         --md-font-size: 1.075rem;
         --sm-font-size: .985rem;
-        --xs-font-size: .775rem;
+        --xs-font-size: .87rem;
         --h1-font-size: 1.45rem;
         --h2-font-size: 1.3rem;
         --h3-font-size: 1.15rem;
