--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -32,6 +32,7 @@
     --icon-font-size: 1.03rem;
 
     /* ----Margin bottoms--- */
+    --new-sec: 50px;
     --mb-lg: 20px;
     --mb-md: 10px;
     --mb-sm: 5px;
@@ -103,8 +104,8 @@ img{
 }
 /* ----REUSABLE CSS CLASSES------ */
 .section{
-    margin-top: var(--mb-lg);
-    margin-bottom: var(--mb-lg);
+    margin-top: var(--new-sec);
+    margin-bottom: var(--new-sec);
     padding: 25px 10px 10px 25px;
 }
 .section-header{
@@ -136,6 +137,11 @@ img{
     filter: blur(25px);
 }
 /* ---HOME PAGE---- */
+.home-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .profile-img{
     margin: 0 auto;
 }
@@ -542,6 +548,7 @@ footer .contact, footer .social{
         --icon-font-size: 1.18rem;
     
         /* ----Margin bottoms--- */
+        --new-sec: 70px;
         --mb-lg: 30px;
         --mb-md: 20px;
         --mb-sm: 10px;
